Removed overflow:hidden from topic styling to prevent clipping of tooltips

--- a/src/core/quartersbrief.scss
+++ b/src/core/quartersbrief.scss
@@ -37,7 +37,6 @@ header {
 
 .topic {
 	padding: 5% 8%;
-	overflow: hidden;
 }
 
 .topic-caption {
